Dependence injection with tsyringe; refactoring
